--- a/assets/css/mobile-repai.css
+++ b/assets/css/mobile-repai.css
@@ -1,4 +1,4 @@
-@media (max-width: 739px) {
+/* @media (max-width: 739px) {
     .introduction-img {
         padding-top: 180%;
     }
@@ -16,4 +16,4 @@
     .section1 {
         margin-top: 0;
     }
-}
+} */
