--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,13 +1,18 @@
 /* media */
+
 @media (min-width: 1024px) {
-    .section-contact {
-        margin: 0;
+    .section6-left .flat-icon {
+        display: inline-block;
+        position: relative;
+        top: -50%;
+        right: 0;
+        transform: translate(430%, -50%);
+    }
+    .section6-left {
+        height: 550px;
     }
 }
 @media (min-width: 740px) and (max-width: 1023px){
-    .introduction-img {
-        padding-top: 110%;
-    }
     .header {
         background-color: #222222;
         padding: 0 10px;
@@ -17,7 +22,6 @@
         display: block;
     }
     .nav-bar {
-        /* display: none; */
         position: absolute;
         top: 0;
         left: 0;
@@ -25,60 +29,34 @@
         bottom: 0;
         margin-top: 90px;
     }
+    .header .hidend {
+        display: none;
+        /* opacity: 0; */
+    }
     .header .nav-bar ul {
         display: block;
         background-color: #222222;
+        height: 280px;
     }
     .list-item {
         padding: 5px 25px;
 
-    }
-    .section1 {
-    }
-    .section1__right {
-        margin-top: 45px;
-    }
-    .sub-heading h2 {
-        width: 100%;
-    }
-    .section3 .text {
-        padding: 40px 10px;
-
-    }
-    .section3 .text h2 {
-        width: 75%;
-    }
-    .section6-left {
-        height: 300px;
-    }
-    .section6-left .img-sec6 {
-        height: 100%;
     }
     .section6-left .flat-icon {
         display: inline-block;
         position: relative;
         top: -50%;
         right: 0;
-        transform: translate(310%, -50%);
+        transform: translate(300%, -50%);
     }
-    .boxed .box {
-        height: 75px;
-    }
-    .boxed .last-box p {
-        display: inline-block;
-    }
-    .section2,
-    .section4 {
-        margin: 100px 0;
-    }
-    .section-contact {
-        margin: 0;
+    .section6-left {
+        height: 450px;
     }
 }
 
 @media (max-width: 739px) {
+    
     .nav-bar {
-        display: none;
         position: absolute;
         top: 0;
         left: 0;
@@ -89,6 +67,10 @@
     .header .nav-bar ul {
         display: block;
         background-color: #222222;
+        height: 280px;
+    }
+    .header .hidend {
+        display: none;
     }
     .list-item {
         padding: 5px 25px;
@@ -98,6 +80,20 @@
         background-color: #222222;
         padding: 0 10px;
     }
+    /* *************** */
+    .heading-container h1 {
+        font-size: 40px;
+        padding: 10px 15px;
+    }
+    .button .btn {
+        display: block;
+        margin: 5px;
+    }
+    .section6 .row {
+        margin: 0;
+    }
+
+    /* *************** */
     .sub-heading h2 {
         width: 100%;
     }
@@ -107,10 +103,6 @@
     .introduction-img {
         padding-top: 100%;
     }
-    .introduction-decription {
-        position: relative;
-        transform: translate(-50%,-145%);
-    }
     .introduction-decription h1 {
         font-size: 40px;
     }
@@ -119,8 +111,9 @@
         margin: 10px;
     }
     .section1 {
-        margin-top: 750px;
+        margin: 0;
     }
+    
     .section1__right {
         margin-top: 50px;
         padding-left: 20px;
@@ -171,4 +164,41 @@
         margin: 0;
     }
 
+}
+
+@keyframes top-down {
+    from {
+        height: 0;
+        opacity: 0;
+    }
+    to {
+        height: 280px;
+        opacity: 1;
+    }
+}
+@keyframes down-top {
+    from {
+        height: 280px;
+        opacity: 1;
+    }
+    to {
+        height: 0;
+        opacity: 0;
+    }
+}
+@keyframes top-down2 {
+    from {
+        transform:translateY(0);
+    }
+    to {
+        transform:translateY(280px);
+    }
+} 
+@keyframes down-top2 {
+    from {
+        transform:translateY(280px);
+    }
+    to {
+        transform:translateY(0);
+    }
 }
